cabal-version:      2.4
name:               abs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sebastian Graf
maintainer:         sgraf1337@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs:
        src
    build-depends:    base
                    , containers
                    , transformers
                    , hedgehog
                    , lifted-async
    exposed-modules:
        Cont
        Stateless
        Stateful
        DynamicEnv
        Envless
        Stackless
        Expr
        Main
        Gen
        TestMain
    default-language: Haskell2010

test-suite abs-test
    -- Import common warning flags.
    --import:           warnings

    -- Base language which the package is written in.
    default-language: Haskell2010

    -- Modules included in this executable, other than Main.
    other-modules:    Gen

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          Main.hs

    -- Test dependencies.
    build-depends:    abs
                    , base
                    , containers
                    , transformers
                    , QuickCheck
                    , hedgehog
